--- a/client/style.css
+++ b/client/style.css
@@ -76,9 +76,9 @@ a {
 
 .profileCard {
   width: 600px;
-  height: 400px;
   border: 1px solid black;
   margin: 0 auto;
+  background: #fff;
 }
 
 .embedCode {
@@ -104,6 +104,79 @@ a {
   color: #fff;
 }
 
+/* Profile Card Styles */
+.img-container {
+  height: 200px;
+  border-bottom: 1px solid black;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  position: relative;
+  background-image: skyblue;
+}
+
+.profile-img {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 10px;
+  top: 150px;
+  display: inline-block;
+  border-radius: 50%;
+  border: 4px solid #fff;
+}
+
+.profileCard .profile-name {
+  padding: 10px;
+}
+
+.profileCard .profile-name p {
+  font-size: 18px;
+  position: relative;
+  top: 40px;
+}
+
+.profileCard .profile-name .twitter-handle {
+  font-size: 15px;
+  color: rgb(90, 90, 90);
+}
+
+.profileCard .profile-bio {
+  padding: 10px;
+  position: relative;
+  top: 35px;
+  font-size: 15px;
+}
+
+.profileCard .location-and-url {
+  font-size: 15px;
+  color: rgb(90, 90, 90);
+  padding: 40px 10px 10px 10px;
+}
+
+.profileCard .follow-count {
+  font-size: 15px;
+  color: rgb(90, 90, 90);
+  padding: 10px;
+}
+
+.count {
+  font-weight: bold;
+  color: black;
+  padding-right: 2px;
+}
+
+.following,
+.followers {
+  display: inline-block;
+  padding-right: 8px;
+}
+
+.location,
+.url {
+  display: inline-block;
+}
+
 footer {
   border-top: 1px solid black;
   height: 200px;
@@ -121,19 +194,47 @@ footer p {
 /* Media query for profile twitter profile card */
 @media all and (max-width: 768px) {
   .profileCard {
-    width: 400px;
+    width: 480px;
+  }
+
+  .img-container {
+    height: 160px;
+  }
+
+  .profile-img {
+    top: 110px;
   }
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 570px) {
   .profileCard {
     width: 320px;
+  }
+
+  .profile-img {
+    width: 80px;
+    height: 80px;
+    top: 70px;
+  }
+
+  .img-container {
+    height: 107px;
   }
 }
 
 @media all and (max-width: 420px) {
   .profileCard {
     width: 100%;
+  }
+
+  .img-container {
+    height: 60px;
+  }
+
+  .profile-img {
+    width: 70px;
+    height: 70px;
+    top: 35px;
   }
 }
 
